# ArithmeticExpressionParser

./: CMakeLists.txt
include/parser/: parser.hpp  token.hpp
src/: main.cpp
src/expr-token/: token.cpp  token.hpp
src/parser/: parser.cpp  parser.hpp  parser_expr.cpp  parser_literal.cpp  parser_operator.cpp  parser_utility.cpp  parser_verbose.cpp  token.cpp  token_evaluate.cpp  token_reduce.cpp  token_tree_view.cpp
test/: CMakeLists.txt  evaluate_test.cpp  mytest.cpp  parser_test.cpp
